--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             function toggleDefaultParams() {
                 var display = document.getElementById("defaultParams");
                 if(display.innerHTML.trim() == "") {
-                    display.innerHTML = "Original: " + getDefaultParams(false) + " Current: " + getDefaultParams(true);
+                    display.innerHTML = "Orig: " + getDefaultParams(false) + "<br>Curr: " + getDefaultParams(true);
                 } else {
                     display.innerHTML = "";
                 }
