prevent saving page behavior.

--- a/index.html
+++ b/index.html
@@ -396,6 +396,7 @@
                 var charStr = String.fromCharCode(charCode);
                 if(evt.ctrlKey && charStr == "s") {
                     saveState();
+                    evt.preventDefault();
                 }
             }
         </script>
