--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                 var sprintTime = document.getElementById("sprint_time");
                                 var countdown = document.getElementById("countdown");
                                 var timeToGo = sprintTime.value * 60 + globalState.vars["sprint_start_time"] - getTime();
-                                countdown.innerHTML =  (timeToGo/60).toFixed(0) + " minutes and " + (timeToGo%60).toFixed(0) + " seconds to go.";
+                                countdown.innerHTML =  Math.floor(timeToGo/60) + " minutes and " + timeToGo%60 + " seconds to go.";
                             }
                             function resetSprintStartTime() {
                                 globalState.vars["sprint_start_time"] = getTime();
