fixed some browser warnings.

--- a/static/index.html
+++ b/static/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <body>
         <hr>
@@ -14,7 +15,7 @@
             <hr>
             <p id="save_stats">Not Saved.</p>
             <p><button onclick="saveState()">Save?</button> (to browser)</p>
-            <p><input type="checkbox" id="auto_save" checked></input> 5 minute auto-save?</p>
+            <p><input type="checkbox" id="auto_save" checked> 5 minute auto-save?</p>
             <p><button onclick="loadSavedState()">Reload...</button> last saved state.</p>
             <button onclick="revealHiddenText()">Download what I wrote.</button>
         </div>
