added character encoding

--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <meta charset="utf-8">
     <body>
         <hr>
         <p><i>I do not like work even when someone else does it.</i> -- MT</p>
