quoted mark twain explicitly.

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <body>
         <hr>
-        <p><i>I do not like work even when someone else does it.</i> -- MT</p>
+        <p><i>I do not like work even when someone else does it.</i> -- Mark Twain</p>
         <hr>
         <hr>
         <div id="leftSandbox" style="float:left;border-size:1px;"></div>
