--- a/static/index.html
+++ b/static/index.html
@@ -98,6 +98,12 @@
                     document.getElementById("notes").value = state["notes"];
                 }
             }
+            function saveLayout() {
+                var qParams = document.location.search;
+                if(qParams.length != 0) {
+                    saveApi(getProjectName(), {"layout": qParams});
+                }
+            }
             function getParameterByName(name, url) {
                 if (!url) url = window.location.href;
                 name = name.replace(/[\[\]]/g, "\\$&");
@@ -106,12 +112,6 @@
                 if (!results) return null;
                 if (!results[2]) return '';
                 return decodeURIComponent(results[2].replace(/\+/g, " "));
-            }
-            function saveLayout() {
-                var qParams = document.location.search;
-                if(qParams.length != 0) {
-                    saveApi(getProjectName(), {"layout": qParams});
-                }
             }
             function processDivLoc(key, value) {
                 var element = document.getElementById(key)
@@ -346,7 +346,7 @@
             function toggleDefaultParams() {
                 var display = document.getElementById("defaultParams");
                 if(display.innerHTML.trim() == "") {
-                    display.innerHTML = "Orig: " + getDefaultParams(false) + "<br>Curr: " + getDefaultParams(true);
+                    display.innerHTML = "Orig: " + getDefaultParams(false) + "<br>User: " + getDefaultParams(true);
                 } else {
                     display.innerHTML = "";
                 }
@@ -358,6 +358,7 @@
                 if(!document.location.search.length) {
                     //default to :
                     url += getDefaultParams(true);
+                    window.location.replace(url);
                 }
                 var divLocs = ["L", "R"];
                 for(var i = 0; i < divLocs.length; i++) {
