--- a/static/index.html
+++ b/static/index.html
@@ -6,8 +6,8 @@
         <p><i>I do not like work even when someone else does it.</i> -- Mark Twain</p>
         <hr>
         <hr>
-        <div id="leftSandbox" style="float:left;border-size:1px;"></div>
-        <div id="rightSandbox" style="float:right;border-size:1px;"></div>
+        <div id="left_divs" style="float:left;border-size:1px;"></div>
+        <div id="right_divs" style="float:right;border-size:1px;"></div>
         <div style="clear:both; bottom: 5px;">
             <hr>
             <hr>
@@ -21,6 +21,9 @@
             <button onclick="revealHiddenText()">Download what I wrote.</button>
         </div>
         <script>
+            function getTime() {
+                return new Date().getTime() / 1000;
+            }
             function getProjectName() {
                 //<p>Project Name:  <input type:"text" id="project_name"></input> <button onclick="saveState()">Save!</button><button onclick="loadSavedState()">Load...</button></p>
                 //not allowing users to pick names, to avoid clutter saved in the browser history.
@@ -113,24 +116,15 @@
                 if (!results[2]) return '';
                 return decodeURIComponent(results[2].replace(/\+/g, " "));
             }
-            function processDivLoc(key, value) {
-                var element = document.getElementById(key)
-                if (element == null) {
-                    element = document.createElement("DIV");
-                    element.id = key;
-                    if(key[0] == "R") {
-                        document.getElementById("rightSandbox").appendChild(element);
-                    } else  {
-                        document.getElementById("leftSandbox").appendChild(element);
-                    }
-                }
-                var widgetStateUpdate = {};
-                if( value == null ) {
-                    element.style.visibility = "hidden";
+            function createWidgetDiv(locKey, widgetType) {
+                if( widgetType == null ) {
                     return;
                 }
-                element.style.visibility = "visible";
-                switch(value) {
+                var element = document.createElement("DIV");
+                var widgetStateUpdate = {};
+
+                //try to create widget:
+                switch(widgetType) {
                     case "notes":
                         var notes = document.getElementById("notes");
                         if(notes == null) {
@@ -174,7 +168,7 @@
                             element.appendChild(maxTextParent);
                             element.appendChild(noDisplayLimitParent);
                             element.appendChild(tunnel);
-                            widgetStateUpdate[value] = function() { //maybe this is a fundamental function and should be just a widget?
+                            widgetStateUpdate[widgetType] = function() { //maybe this is a fundamental function and should be just a widget?
                                 var textBox = document.getElementById("text_box");
                                 var excessText = textBox.value.length; // Edge case that there are no spaces
                                 var maxTextLength;
@@ -216,7 +210,7 @@
                             numWords.innerHTML = "Word count: 0";
                             element.appendChild(numChars);
                             element.appendChild(numWords);
-                            widgetStateUpdate[value] = function () {
+                            widgetStateUpdate[widgetType] = function () {
                                 var textBox = document.getElementById("text_box");
                                 var totalChars = globalState.vars["hidden_text"].length + textBox.value.length;
                                 globalState.vars["word_count"] = globalState.vars["hidden_word_count"] + textBox.value.split(/[ \n]+/).filter(function(entry) { return entry != ""; }).length;
@@ -263,7 +257,7 @@
                             element.appendChild(sprintParent);
                             element.appendChild(countdown);
 
-                            widgetStateUpdate[value] = function() {
+                            widgetStateUpdate[widgetType] = function() {
                                 if(globalState.vars["sprint_start_time"] > 0) {
                                     var sprintTime = document.getElementById("sprint_time");
                                     displaySprintTimeToGo();
@@ -322,7 +316,7 @@
                             element.appendChild(wpmResetButton);
                             element.appendChild(wpm);
 
-                            widgetStateUpdate[value] = function() {
+                            widgetStateUpdate[widgetType] = function() {
                                 var wpm = document.getElementById("words_per_minute")
                                 if(wpm != null) {
                                     wpm.innerHTML = "Words/Minute: " + computeWordsPerMinute().toFixed(2);
@@ -330,6 +324,20 @@
                             }
                         }
                         break;
+                    default: //unknown widget:
+                        return {};
+                }
+
+                //try to create DIV if the widget creation was successful:
+                switch(locKey[0]) {
+                    case "R":
+                        document.getElementById("right_divs").appendChild(element);
+                        break;
+                    case "L":
+                        document.getElementById("left_divs").appendChild(element);
+                        break;
+                    default: //unknown location
+                        return {};
                 }
                 return widgetStateUpdate;
             }
@@ -353,13 +361,16 @@
             }
             function setupDivsFromURL() {
                 var widgetState = {};
-                //var divTypes = ["timer", "notes", "window", "sprint", "wpm", "stats"];
                 var url = window.location.href;
+
+                //redirect if no params are given:
                 if(!document.location.search.length) {
                     //default to :
                     url += getDefaultParams(true);
                     window.location.replace(url);
                 }
+
+                //Check for location parameters:
                 var divLocs = ["L", "R"];
                 for(var i = 0; i < divLocs.length; i++) {
                     var paramKey = divLocs[i];
@@ -370,17 +381,13 @@
                     }
                     for(var j=0;j<values.length;j++) {
                         var value = values[j];
-                        var locKey = paramKey + j;
-                        var widgetStateUpdate = processDivLoc(locKey, value);
+                        var widgetStateUpdate = createWidgetDiv(paramKey, value);
                         for(var key in widgetStateUpdate) {
                             widgetState[key] = widgetStateUpdate[key];
                         }
                     }
                 }
                 return widgetState;
-            }
-            function getTime() {
-                return new Date().getTime() / 1000;
             }
             function collectInput() {
                 for (key in widgetState) {
