--- a/static/index.html
+++ b/static/index.html
@@ -6,13 +6,13 @@
         <p><i>I do not like work even when someone else does it.</i> -- Mark Twain</p>
         <hr>
         <hr>
-        <div id="left_divs" style="float:left;border-size:1px;"></div>
-        <div id="right_divs" style="float:right;border-size:1px;"></div>
+        <div id="left_divs" style="float:left;border-size:1px;"><p id="L" style="display:none">L = </p></div>
+        <div id="right_divs" style="float:right;border-size:1px;"><p id="R" style="display:none">R = </p></div>
         <div style="clear:both; bottom: 5px;">
             <hr>
             <hr>
             <button onclick="saveLayout()">Save Layout</button>
-            <button onclick="toggleDefaultParams()">Show/Hide Default Settings</button><p id="defaultParams"> </p>
+            <button onclick="toggleLayouts()">Show/Hide URL Settings</button><p id="defaultLayouts" style="display:none"> </p>
             <hr>
             <p id="save_stats">Not Saved.</p>
             <p><button onclick="saveState()">Save?</button> (to browser)</p>
@@ -351,12 +351,59 @@
                 }
                 return defaultLayout
             }
-            function toggleDefaultParams() {
-                var display = document.getElementById("defaultParams");
-                if(display.innerHTML.trim() == "") {
-                    display.innerHTML = "Orig: " + getDefaultParams(false) + "<br>User: " + getDefaultParams(true);
+            function shuffle(array) {
+                var m = array.length, t, i;
+
+                // While there remain elements to shuffle…
+                while (m) {
+
+                    // Pick a remaining element…
+                    i = Math.floor(Math.random() * m--);
+
+                    // And swap it with the current element.
+                    t = array[m];
+                    array[m] = array[i];
+                    array[i] = t;
+                }
+
+                return array;
+            }
+            function randInt(min, max) {
+                return Math.floor(Math.random() * (max - min + 1)) + min;
+            }
+            function getRandomParams() {
+                var widgetOrder = shuffle(["tunnel", "stats", "wpm", "notes", "sprint"]);
+                var rPos  = randInt(0, widgetOrder.length);
+                var rWidgets = widgetOrder.slice(rPos);
+                var lWidgets = widgetOrder.slice(0, rPos);
+                var paramStr = "?";
+                if(lWidgets.length > 0){
+                    paramStr += "L=" + lWidgets.join(",");
+                    if(rWidgets.length > 0) {
+                        paramStr += "&";
+                    }
+                }
+                if(rWidgets.length > 0){
+                    paramStr += "R=" + rWidgets.join(",");
+                }
+                return paramStr
+            }
+            function toggleLayouts() {
+                var defaultLayouts = document.getElementById("defaultLayouts");
+                if(defaultLayouts.innerHTML.trim() == "") {
+                    var origParams = getDefaultParams(false);
+                    var userParams = getDefaultParams(true);
+                    var randParams = getRandomParams();
+                    defaultLayouts.innerHTML = "Orig: <a href=\"" + origParams +"\">" + origParams + "</a><br>User: <a href=\"" + userParams +"\">" + userParams +"</a><br>Rand: <a href=\"" + randParams +"\">" + randParams + "</a>";
+                }
+                if(defaultLayouts.style.display == "none") {
+                    defaultLayouts.style.display = "block";
+                    document.getElementById("L").style.display = "block";
+                    document.getElementById("R").style.display = "block";
                 } else {
-                    display.innerHTML = "";
+                    defaultLayouts.style.display = "none";
+                    document.getElementById("L").style.display = "none";
+                    document.getElementById("R").style.display = "none";
                 }
             }
             function setupDivsFromURL() {
@@ -379,6 +426,7 @@
                     if(valuesString) {
                         values = valuesString.split(",");
                     }
+                    document.getElementById(paramKey).innerHTML = paramKey + " = " + valuesString;
                     for(var j=0;j<values.length;j++) {
                         var value = values[j];
                         var widgetStateUpdate = createWidgetDiv(paramKey, value);
