made a cosmetic changes.

--- a/static/index.html
+++ b/static/index.html
@@ -143,7 +143,7 @@
                         var tunnel = document.getElementById("text_box");
                         if(tunnel == null) {
                             var tunnelHeading = document.createElement("p");
-                            tunnelHeading.innerHTML = "-- Write here:";
+                            tunnelHeading.innerHTML = "Write here:";
 
                             var tunnel = document.createElement("TEXTAREA");
                             tunnel.id = "text_box";
