--- a/static/index.html
+++ b/static/index.html
@@ -134,7 +134,7 @@
                             notes.cols = "50";
                             notes.style.visibility = "visible";
                             var heading = document.createElement("p");
-                            heading.innerHTML = "Notes:";
+                            heading.innerHTML = "<i>Notes</i>:";
                             element.appendChild(heading);
                             element.appendChild(notes);
                         }
@@ -143,7 +143,7 @@
                         var tunnel = document.getElementById("text_box");
                         if(tunnel == null) {
                             var tunnelHeading = document.createElement("p");
-                            tunnelHeading.innerHTML = "Write here:";
+                            tunnelHeading.innerHTML = "<i>Write here</i>:";
 
                             var tunnel = document.createElement("TEXTAREA");
                             tunnel.id = "text_box";
@@ -158,12 +158,17 @@
                     case "stats":
                         var num_chars = document.getElementById("num_chars");
                         if(num_chars == null) {
+                            var heading = document.createElement("p");
+                            heading.innerHTML = "<i>Stats</i>:";
+                            element.appendChild(heading);
                             var numChars = document.createElement("p");
                             numChars.id = "num_chars";
                             numChars.innerHTML = "Char count: 0";
                             var numWords = document.createElement("p");
                             numWords.id = "num_words";
                             numWords.innerHTML = "Word count: 0";
+
+                            element.appendChild(heading);
                             element.appendChild(numChars);
                             element.appendChild(numWords);
                             widgetStateUpdate[widgetType] = function () {
@@ -179,6 +184,9 @@
                     case "sprint":
                         var sprint = document.getElementById("sprint_time");
                         if(sprint == null){
+                            var heading = document.createElement("p");
+                            heading.innerHTML = "<i>Sprint</i>:";
+                            element.appendChild(heading);
                             var sprint = document.createElement("input");
                             sprint.type= "number";
                             sprint.id = "sprint_time";
@@ -210,6 +218,7 @@
                             sprintResetButton.innerHTML = "Start Sprint";
                             sprintParent.appendChild(sprintResetButton);
 
+                            element.appendChild(heading);
                             element.appendChild(countdown);
                             element.appendChild(sprintParent);
 
@@ -229,6 +238,10 @@
                     case "wpm":
                         var wpmToggleButton = document.getElementById("wpm_toggle");
                         if(wpmToggleButton == null){
+                            var heading = document.createElement("p");
+                            heading.innerHTML = "<i>Words per minute</i>:";
+                            element.appendChild(heading);
+
                             globalState.vars["wpm_offset"] = 0;
                             //wpm stat:
                             var wpm = document.createElement("p");
@@ -268,6 +281,7 @@
                             wpmToggleButton.onclick = toggleWordsPerMinute;
                             wpmToggleButton.innerHTML = "Show/Hide Words/Minute";
 
+                            element.appendChild(heading);
                             element.appendChild(wpmToggleButton);
                             element.appendChild(wpmResetButton);
                             element.appendChild(wpm);
