--- a/static/index.html
+++ b/static/index.html
@@ -70,6 +70,8 @@
                 if(textBoxElement != null){
                     text = textBoxElement.value;
                 }
+                var text = globalState.vars["hidden_text"] + text;
+
                 var notesElement = document.getElementById("notes");
                 var notes = "";
                 if(notesElement != null) {
@@ -94,6 +96,7 @@
                     return;
                 }
                 var state = getApi(name, ["text_box", "notes"]);
+                globalState.vars["hidden_text"] = "";
                 if(state["text_box"] != null) {
                     document.getElementById("text_box").value = state["text_box"];
                 }
@@ -145,13 +148,60 @@
                             var tunnelHeading = document.createElement("p");
                             tunnelHeading.innerHTML = "<i>Write here</i>:";
 
+                            var maxText = document.createElement("input");
+                            maxText.type = "number";
+                            maxText.id = "max_text";
+                            maxText.min = "20";
+                            maxText.max = "5000"
+                            maxText.placeholder = "150";
+                            maxText.defaultValue = "150";
+                            var maxTextParent = document.createElement("p");
+                            maxTextParent.innerHTML = "text display limit (20-5000 chars) ";
+                            maxTextParent.appendChild(maxText);
+                            var noDisplayLimit = document.createElement("input");
+                            noDisplayLimit.type = "checkbox";
+                            noDisplayLimit.id = "noDisplayLimit";
+                            noDisplayLimit.checked = true;
+                            var noDisplayLimitParent = document.createElement("p");
+                            noDisplayLimitParent.innerHTML = "no display limit?";
+                            noDisplayLimitParent.appendChild(noDisplayLimit);
+
                             var tunnel = document.createElement("TEXTAREA");
                             tunnel.id = "text_box";
                             tunnel.rows = "2";
                             tunnel.cols = "50";
                             element.appendChild(tunnelHeading);
+                            element.appendChild(maxTextParent);
+                            element.appendChild(noDisplayLimitParent);
                             element.appendChild(tunnel);
                             widgetStateUpdate[widgetType] = function() { //maybe this is a fundamental function and should be just a widget?
+                                var textBox = document.getElementById("text_box");
+                                var excessText = textBox.value.length; // Edge case that there are no spaces
+                                var maxTextLength;
+                                var maxTextInput = document.getElementById("max_text");
+                                if(maxTextInput.value < maxTextInput.min || maxTextInput.value > maxTextInput.max) {
+                                    maxTextInput.value = maxTextInput.defaultValue;
+                                }
+                                maxTextLength = maxTextInput.value;
+
+                                if(maxTextLength != 0) {
+                                    var excessTextSpace = textBox.value.lastIndexOf(" ", textBox.value.length - maxTextLength);
+                                    var excessTextNewline = textBox.value.lastIndexOf("\n", textBox.value.length - maxTextLength);
+                                    excessText = excessTextSpace;
+                                    if( excessText < excessTextNewline) {
+                                        excessText = excessTextNewline;
+                                    }
+                                }
+                                var keepText = textBox.value;
+                                if(maxTextLength == 0 || (excessText > 0 && !document.getElementById("noDisplayLimit").checked)) {
+                                    var newText = textBox.value.substring(0, excessText);
+                                    var newWords = newText.split(/[ \n]+/);
+                                    newWords = newWords.filter(function(entry) { return entry != ""; });
+                                    globalState.vars["hidden_word_count"] += newWords.length 
+                                    globalState.vars["hidden_text"] += newText;
+                                    keepText = textBox.value.substring(excessText, textBox.value.length+10);
+                                    textBox.value = keepText;
+                                }
                             }
                         }
                         break;
@@ -173,8 +223,8 @@
                             element.appendChild(numWords);
                             widgetStateUpdate[widgetType] = function () {
                                 var textBox = document.getElementById("text_box");
-                                var totalChars = textBox.value.length;
-                                globalState.vars["word_count"] = textBox.value.split(/[ \n]+/).filter(function(entry) { return entry != ""; }).length;
+                                var totalChars = globalState.vars["hidden_text"].length + textBox.value.length;
+                                globalState.vars["word_count"] = globalState.vars["hidden_word_count"] + textBox.value.split(/[ \n]+/).filter(function(entry) { return entry != ""; }).length;
                                 var numChars = document.getElementById("num_chars")
                                 numChars.innerHTML = "Char count: " + totalChars;
                                 document.getElementById("num_words").innerHTML = "Word count: " + globalState.vars["word_count"];
@@ -420,13 +470,15 @@
             function toDownloadPage() {
                 updateState();
                 saveState();
-                var totalText = document.getElementById("text_box").value;
+                var totalText = globalState.vars["hidden_text"] + document.getElementById("text_box").value;
                 document.write("<html><body><a href='data:text/plain;charset=utf-8," + escape(totalText) +"' target=\"_blank\" download=\"tv.txt\">Download it!!</a><p style=\"white-space:pre-wrap;\">" + totalText + "</p></body></html>");
                 document.close();
             }
 
             var globalState = { 
                 vars: {
+                    hidden_text: "", 
+                    hidden_word_count: 0,
                     word_count: 0,
                     last_saved_time: getTime()
                 }
