--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <body>
         <hr>
-        <p><i>I do not like work even when someone else does it.</i> -- Mark Twain</p>
+        <p style="text-align:center;"><i>I do not like work even when someone else does it.</i> -- Mark Twain</p>
         <hr>
         <hr>
         <div id="left_divs" style="float:left;border-size:1px;"><p id="L" style="display:none">L = </p></div>
@@ -156,24 +156,24 @@
                             maxText.placeholder = "150";
                             maxText.defaultValue = "150";
                             var maxTextParent = document.createElement("p");
-                            maxTextParent.innerHTML = "text display limit (20-5000 chars) ";
+                            maxTextParent.innerHTML = "Scroll limit (20-5000 chars) ";
                             maxTextParent.appendChild(maxText);
-                            var noDisplayLimit = document.createElement("input");
-                            noDisplayLimit.type = "checkbox";
-                            noDisplayLimit.id = "noDisplayLimit";
-                            noDisplayLimit.checked = true;
-                            var noDisplayLimitParent = document.createElement("p");
-                            noDisplayLimitParent.innerHTML = "no display limit?";
-                            noDisplayLimitParent.appendChild(noDisplayLimit);
+                            var enableCharLimit = document.createElement("input");
+                            enableCharLimit.type = "checkbox";
+                            enableCharLimit.id = "enable_char_limit";
+                            enableCharLimit.checked = false;
+                            var enableCharLimitParent = document.createElement("p");
+                            enableCharLimitParent.innerHTML = "Enable scroll limit?";
+                            enableCharLimitParent.appendChild(enableCharLimit);
 
                             var tunnel = document.createElement("TEXTAREA");
                             tunnel.id = "text_box";
                             tunnel.rows = "2";
                             tunnel.cols = "50";
                             element.appendChild(tunnelHeading);
-                            element.appendChild(maxTextParent);
-                            element.appendChild(noDisplayLimitParent);
                             element.appendChild(tunnel);
+                            element.appendChild(enableCharLimitParent);
+                            element.appendChild(maxTextParent);
                             widgetStateUpdate[widgetType] = function() { //maybe this is a fundamental function and should be just a widget?
                                 var textBox = document.getElementById("text_box");
                                 var excessText = textBox.value.length; // Edge case that there are no spaces
@@ -193,7 +193,7 @@
                                     }
                                 }
                                 var keepText = textBox.value;
-                                if(maxTextLength == 0 || (excessText > 0 && !document.getElementById("noDisplayLimit").checked)) {
+                                if(maxTextLength == 0 || (excessText > 0 && document.getElementById("enable_char_limit").checked)) {
                                     var newText = textBox.value.substring(0, excessText);
                                     var newWords = newText.split(/[ \n]+/);
                                     newWords = newWords.filter(function(entry) { return entry != ""; });
